# python_codebase_parser

./: .gitignore  Makefile  README.md  README_en.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: lint.yaml
context/: .hadolint.yaml  Dockerfile
context/cpu/: docker-compose.yml
context/gpu/: docker-compose.yml
libs/abeja-toolkit/notebook_exporter/: README.md  export.py  pyproject.toml
libs/abeja-toolkit/notebook_exporter/example/: sample_notebook.ipynb
libs/abeja-toolkit/notebook_exporter/src/notebook_exporter/: __init__.py  data.py  extractor.py  notion.py  secret.py  utils.py
libs/abeja-toolkit/notion_extension/: README.md  pyproject.toml
libs/abeja-toolkit/notion_extension/src/notion_extension/: __init__.py  base.py  blocks.py  client.py  colors.py  db_properties.py  factory.py  objects.py  utils.py
libs/abeja-toolkit/spreadsheet/: README.md  pyproject.toml
libs/abeja-toolkit/spreadsheet/src/spreadsheet/: __init__.py  sheet.py
project_module/: pyproject.toml
project_module/src/project_module/prediction/: __init__.py  config.py  io.py  pipeline.py
project_module/src/project_module/training/: __init__.py  config.py  io.py  pipeline.py
