[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
project-module = {path = "project_module", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.jupyter.dependencies]
jupyterlab = "^4.0.3"
notebook = "^7.2.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"
mypy = "^1.11.2"
notion-extension = {path = "libs/abeja-toolkit/notion_extension", develop = true}
notebook-exporter = {path = "libs/abeja-toolkit/notebook_exporter", develop = true}

[tool.ruff]
target-version = "py310"
line-length = 100
indent-width = 4

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "B", # flake8-bugbear
    "I", # isort
]

ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "B024", # abstract class has no abstract methods
]

unfixable = [
    "F401", # module imported but unused
    "F841", # local variable is assigned to but never used, 
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
disallow_untyped_calls = false # because this rule is applied to third-party packages as well, it's too strict
disallow_incomplete_defs = true
disallow_untyped_decorators = false # because this rule is applied to third-party packages as well, it's too strict
allow_untyped_globals = false # use Final type instead
allow_redefinition = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_no_return = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
no_namespace_packages = true
pretty = true
strict = true

exclude = "tests"

[tool.black]
line-length = 100