[tool.poetry]
name = "python-codebase-parser"
version = "0.1.0"
description = ""
readme = "README.md"
authors = []
packages = [{include = "python_codebase_parser", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pydantic = "^2.9.2"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
