[tool.poetry]
name = "notion-extension"
version = "0.2.1"
description = ""
authors = ["taikinman <okipedia6161@gmail.com>"]
readme = "README.md"
packages = [{include = "notion_extension", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
notion-client = "^2.2.1"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
